--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,22 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# capacitor
+.capacitor/
+
+# android
+android/.gradle/
+android/.idea/
+android/build/
+android/app/build/
+android/app/release/
+android/local.properties
+*.apk
+*.aab
+*.keystore
+!growbro-release.keystore
+
+# iOS (for future)
+ios/App/Pods/
+ios/App/build/
