--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "date-fns": "2.29.3",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "^11.18.2",
+    "googleapis": "^144.0.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
